# dynahist_rust

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  check.txt  cspell.json  j2r.sh
.cargo/: config.toml
examples/: BinIteration.rs  HistogramUsage.rs  MappingToCustomLayout.rs  PrintUtil.rs
scripts/: rust-post.sh  rust-pre.sh
src/: AbstractHistogram.rs  AbstractMutableHistogram.rs  DynamicHistogram.rs  Histogram.rs  PreprocessedHistogram.rs  StaticHistogram.rs  errors.rs  histogram.rs  lib.rs
src/bins/: AbstractBin.rs  Bin.rs  BinIterator.rs  abstract_bin.rs  bin.rs  bin_iterator.rs  mod.rs
src/builder/: mod.rs
src/errors/: histogram.rs  mod.rs
src/histograms/: abstract_histogram.rs  abstract_mutable_histogram.rs  dynamic_histogram.rs  fixed.rs  histogram.rs  mod.rs  preprocessed_histogram.rs
src/layout/: AbstractLayout.rs  CustomLayout.rs  Layout.rs  LayoutSerialization.rs  LayoutSerializationDefinition.rs  LogLinearLayout.rs  LogOptimalLayout.rs  LogQuadraticLayout.rs  OpenTelemetryExponentialBucketsLayout.rs  mod.rs
src/layouts/: CustomLayout.rs  LayoutSerialization.rs  LayoutSerializationDefinition.rs  LogLinearLayout.rs  LogOptimalLayout.rs  LogQuadraticLayout.rs  OpenTelemetryExponentialBucketsLayout.rs  custom_layout.rs  guess_layout.rs  layout.rs  layout_serialization.rs  layout_serialization_definition.rs  log_linear_layout.rs  log_optimal_layout.rs  log_quadratic_layout.rs  mod.rs  open_telemetry_exponential_buckets_layout.rs
src/quantile/: QuantileEstimator.rs  SciPyQuantileEstimator.rs
src/quantiles/: mod.rs  quantile_estimation.rs  quantile_estimators.rs
src/serialization/: SerializationReader.rs  SerializationUtil.rs  SerializationWriter.rs  deserialization.rs  serialization.rs  seriate.rs
src/seriate/: deserialization.rs  mod.rs  serialization.rs
src/sketches/: data.rs  dyna.rs  mod.rs
src/std/: mod.rs
src/tracing/: opentelemetry.rs  otel.rs
src/util/: Algorithms.rs  Preconditions.rs
src/utilities/: algorithms.rs  data.rs  macros.rs  mod.rs  preconditions.rs
src/value/: ValueEstimator.rs  ValueEstimatorImpls.rs  mod.rs  value_estimation.rs  value_estimators.rs
src/values/: mod.rs  value_estimation.rs  value_estimators.rs
tests/: AbstractHistogramTest.rs  AbstractMutableHistogramTest.rs  DynamicHistogramTest.rs  PreprocessedHistogramTest.rs  StaticHistogramTest.rs
tests/bins/: AbstractBinTest.rs
tests/demo/: PrintUtil.rs
tests/layout/: AbstractErrorLimitingLayoutTest.rs  CustomLayoutTest.rs  LayoutSerializationTest.rs  LayoutTestUtil.rs  LogLinearLayoutTest.rs  LogOptimalLayoutTest.rs  LogQuadraticLayoutTest.rs  TestLayout.rs  (+3 more)
(+16 files in other folders)
