[package]
name = "dynahist_rust"
version = "0.1.0"
edition = "2018"
resolver = "2"

[lib]
name = "dynahist"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
float_next_after = "0.1.5"
num = "0.4.0"
predicates = "2.0.3"
static_assertions = "1.1.0"
thiserror = "1.0"

[features]
test-traits = []

[dev-dependencies]
approx = "0.5.0"
static_assertions = "1.1.0"

[build-dependencies]
static_assertions = "1.1.0"
