[package]
name = "masts"
version = "0.1.0"
edition = "2018"
resolver = "2"

[lib]
name = "dynahist"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
approx = "0.5.0"
bytes = "1.1.0"
bytestream = "0.4.1"
flate2 = "1.0.22"
float_next_after = "0.1.5"
num = "0.4.0"
predicates = "2.0.3"
static_assertions = "1.1.0"
thiserror = "1.0"
tracing = "0.1.29"
tracing-opentelemetry = "0.16.0"
tracing-subscriber = "0.3.1"

[features]
test-traits = []

[dev-dependencies]
approx = "0.5.0"
static_assertions = "1.1.0"

[build-dependencies]
static_assertions = "1.1.0"
