[package]
name = "masts"
version = "0.1.0"
edition = "2021"
authors = ["Mark Van de Vyver <mark@taqtiqa.com>"]
license = "Apache or MIT"
readme = "README.md"
publish = false
resolver = "2"
repository = "https://github.com/taqtiqa/dynahist_rust"
homepage = "https://github.com/taqtiqa/dynahist_rust"
description = """
Builders for sketches, histograms and empirical densities.
"""
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["metrics", "profiling", "tracing"]

[lib]
name = "dynahist"
path = "src/lib.rs"

# [workspace]
# members = [...]
# resolver = "2" # yes, as a string

[profile.release]
debug = 1
incremental = true
lto = "off"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
approx = "0.5.0"
bytes = "1.1.0"
bytestream = "0.4.1"
flate2 = "1.0.22"
float_next_after = "0.1.5"
num = "0.4.0"
predicates = "2.0.3"
static_assertions = "1.1.0"
strum = { version = "0.22", features = ["derive"] }
strum_macros = "0.22"
thiserror = "1.0"
tracing = "0.1.29"
tracing-opentelemetry = "0.16.0"
tracing-subscriber = "0.3.1"

[features]
test-traits = []

[dev-dependencies]
approx = "0.5.0"
static_assertions = "1.1.0"

[build-dependencies]
static_assertions = "1.1.0"
